Add a spanish login route (#295)

--- a/locales/es.json
+++ b/locales/es.json
@@ -256,7 +256,7 @@
 	"Log Back In": "Log Back In",
 	"Email": "Email",
 	"invalid email": "invalid email",
-	"Password": "Password",
+	"Password": "Contraseña",
 	"Need an account?": "Need an account?",
 	"Sign up here.": "Sign up here.",
 	"Help! I forgot my password.": "Help! I forgot my password.",
