Separate middleware and handlebars helpers  (#296)
* clean up handlebars helpers and middlewares. seperate them into different files so it's easier to develop & debug
* clean up handlebars helpers and middlewares. seperate them into different files so it's easier to develop & debug

--- a/locales/en.json
+++ b/locales/en.json
@@ -271,5 +271,7 @@
 	"Register": "Register",
 	"Already have an account?": "Already have an account?",
 	"Login": "Login",
-	"By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.": "By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>."
+	"By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.": "By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.",
+	"Download Plan": "Download Plan",
+	"Download Summary": "Download Summary"
 }
