more Spanish translations

--- a/locales/es.json
+++ b/locales/es.json
@@ -42,9 +42,9 @@
 	"World Languages": "Idiomas del mundo",
 	"What subject(s) do you teach?": "¿Qué materia(s) enseñas?",
 	"submit": "enviar",
-	"Please select a school or a place from the dropdown": "Please select a school or a place from the dropdown",
-	"Please select at least one grade": "Please select at least one grade",
-	"Please select at least one subject": "Please select at least one subject",
+	"Please select a school or a place from the dropdown": "Por favor seleccione una escuela o un lugar del listado desplegable",
+	"Please select at least one grade": "Por favor seleccione al menos un grado",
+	"Please select at least one subject": "Por favor seleccione al menos una asignatura",
 	"Plan A Lesson": "Planea una sesión",
 	"Home": "Inicio",
 	"My Questions": "Mis Preguntas",
@@ -66,30 +66,30 @@
 	"SOLE 101 Training Manual": "SOLE 101 Manual de Entrenamiento",
 	"StartSOLE 101 Presentation": "StartSOLE 101 Presentación",
 	"StartSOLE 101 Presentation (1 hour version)": "StartSOLE 101 Presentación (Versión de 1 hora)",
-	"Sample Advertising Flyer": "Sample Advertising Flyer",
+	"Sample Advertising Flyer": "Muestra de volante publicitario",
 	"Using the SOLE website": "Usando el sitio web de SOLE",
 	"Using the SOLE mobile app": "Usando la app móvil de SOLE",
-	"Copy\n                                        Link": "Copy\n                                        Link",
-	"Please remember to share any copied content with support@startsole.org so we\n                            can learn from your experience.": "Please remember to share any copied content with support@startsole.org so we\n                            can learn from your experience.",
+	"Copy\n                                        Link": "Copiar\n                           Enlace",
+	"Please remember to share any copied content with support@startsole.org so we\n                            can learn from your experience.": "Recuerda compartir cualquier contenido que uses con support@startsole.org para que podamos aprender de tu experiencia.",
 	"Get Help": "Ayuda",
-	"Email Signature": "Email Signature",
-	"To add the StartSOLE signature to your email client, just follow the steps belo": "To add the StartSOLE signature to your email client, just follow the steps belo",
-	"Click here (or use the button below) to copy your signature.": "Click here (or use the button below) to copy your signature.",
-	"Open Gmail.": "Open Gmail.",
-	"In the top right, click Settings": "In the top right, click Settings",
-	"Settings": "Settings",
-	"Paste your signature (Ctrl+V or Command+V) into the 'Signature' section.": "Paste your signature (Ctrl+V or Command+V) into the 'Signature' section.",
-	"At the bottom of the page, click Save Changes.": "At the bottom of the page, click Save Changes.",
-	"Here is a preview of your signatur": "Here is a preview of your signatur",
-	"Copy Signature": "Copy Signature",
+	"Email Signature": "Firma del E-mail",
+	"To add the StartSOLE signature to your email client, just follow the steps belo": "Para agregar la firma de StartSOLE a tu cliente de correo electrónico, simplemente sigue los siguientes pasos",
+	"Click here (or use the button below) to copy your signature.": "Haz clic aquí (o usa el botón de abajo) para copiar tu firma.",
+	"Open Gmail.": "Abre Gmail.",
+	"In the top right, click Settings": "En la parte superior derecha, haz clic en Configuración",
+	"Settings": "Ajustes",
+	"Paste your signature (Ctrl+V or Command+V) into the 'Signature' section.": "Pega tu firma (Ctrl+V o Comando+V) en la sección "Firma".",
+	"At the bottom of the page, click Save Changes.": "En la parte inferior de la página, haz clic en Guardar Cambios.",
+	"Here is a preview of your signatur": "Aquí hay una vista previa de tu firma.",
+	"Copy Signature": "Copia de Firma",
 	"Close": "cerrar",
-	"Link Copied!": "Link Copied!",
-	"Oops, unable to copy!": "Oops, unable to copy!",
-	"Signature Copied!": "Signature Copied!",
-	"Planned": "Planned",
+	"Link Copied!": "¡Enlace Copiado!",
+	"Oops, unable to copy!": "¡Vaya, no se puede copiar!",
+	"Signature Copied!": "¡Firma Copiada!",
+	"Planned": "Planificado",
 	"No SOLEs awaiting reflection": "Ningún SOLE esperando reflexión",
 	"Reflect": "Reflexiona",
-	"Completed": "Completed",
+	"Completed": "Terminado",
 	"Explore Our Questions": "Explora Nuestras Preguntas",
 	"Search by keyword": "Busca por palabra clave",
 	"Nothing here...yet": "Nada aquí... aún",
@@ -106,37 +106,37 @@
 	"What is your big question?": "¿Cuál es tu gran pregunta?",
 	"What is the planned date?": "¿Cuál es la fecha prevista?",
 	"What is the planned time?": "¿Cuál es el tiempo previsto?",
-	"How many minutes is your class?": "How many minutes is your class?",
-	"SOLEs should be at least 30 minutes": "SOLEs should be at least 30 minutes",
-	"Choose a grade": "Choose a grade",
-	"Adult Education": "Adult Education",
+	"How many minutes is your class?": "¿Cuántos minutos dura tu clase?",
+	"SOLEs should be at least 30 minutes": "Los SOLEs deben ser de al menos 30 minutos.",
+	"Choose a grade": "Elige un grado",
+	"Adult Education": "Educacion de adultos",
 	"What grade is your class?": "¿Qué grado es tu clase?",
-	"Choose a subject": "Choose a subject",
+	"Choose a subject": "Elige una asignatura",
 	"What subject is your class?": "¿De qué materia es tu clase?",
 	"Class Label (optional)": "Etiqueta de Clase (opcional)",
-	"SOLEs need at least 4 students": "SOLEs need at least 4 students",
-	"How many <span class='hide-on-large-only'>online </span>devices?": "How many <span class='hide-on-large-only'>online </span>devices?",
-	"SOLEs need at least 2 devices": "SOLEs need at least 2 devices",
-	"How many <span class='hide-on-large-only'>student </span>groups?": "How many <span class='hide-on-large-only'>student </span>groups?",
-	"SOLEs need at least 2 groups": "SOLEs need at least 2 groups",
+	"SOLEs need at least 4 students": "Los SOLEs necesitan al menos 4 participantes.",
+	"How many <span class='hide-on-large-only'>online </span>devices?": "¿Cuántos dispositivos <span class = 'hide-on-large-only'>en línea</span>?",
+	"SOLEs need at least 2 devices": "Los SOLEs necesitan al menos 2 dispositivos.",
+	"How many <span class='hide-on-large-only'>student </span>groups?": "¿Cuántos grupos <span class = 'hide-on-large-only'> estudiante </span>?",
+	"SOLEs need at least 2 groups": "Las SOLE necesitan al menos 2 grupos.",
 	"Recommended Timing": "Tiempo recomendado",
-	"minutes to introduce the question.": "minutes to introduce the question.",
-	"minutes to for the investigation.": "minutes to for the investigation.",
-	"minutes for the review phase.": "minutes for the review phase.",
-	"Choose a content knowledge objective": "Choose a content knowledge objective",
-	"Introducing students to a new concept": "Introducing students to a new concept",
-	"Helping students connect prior knowledge to a current topic": "Helping students connect prior knowledge to a current topic",
-	"Allowing students to discover and explore interests related to a topic": "Allowing students to discover and explore interests related to a topic",
-	"Helping students deepen understanding of a current topic": "Helping students deepen understanding of a current topic",
-	"Reviewing knowledge from a current unit": "Reviewing knowledge from a current unit",
-	"Assessing student understanding of a current topic": "Assessing student understanding of a current topic",
+	"minutes to introduce the question.": "minutos para introducir la pregunta.",
+	"minutes to for the investigation.": "minutos para la búsqueda.",
+	"minutes for the review phase.": "minutos para la fase de retroalimentación.",
+	"Choose a content knowledge objective": "Elige un objetivo de aprendizaje",
+	"Introducing students to a new concept": "Introducir a los participantes a un nuevo concepto.",
+	"Helping students connect prior knowledge to a current topic": "Ayudar a los participantes a conectar conocimientos previos a un tema actual",
+	"Allowing students to discover and explore interests related to a topic": "Permitir que los participantes descubran y exploren intereses relacionados con un tema",
+	"Helping students deepen understanding of a current topic": "Ayudar a los participantes a profundizar la comprensión de un tema actual",
+	"Reviewing knowledge from a current unit": "Revisando los conocimientos de una unidad actual.",
+	"Assessing student understanding of a current topic": "Evaluando la comprensión del participante de un tema actual",
 	"Which of these objectives best describes your goal for this SOLE?": "¿Cuál de estos objetivos describe mejor tu meta para este SOLE?",
 	"How will you manage this SOLE?": "¿Cómo vas a manejar este SOLE?",
 	"Students will be forming their own groups": "Los participantes formarán sus propios grupos.",
 	"Sharing among groups while researching is allowed": "Se permite compartir entre grupos mientras se investiga.",
-	"Students will complete an exit ticket after the SOLE": "Students will complete an exit ticket after the SOLE",
-	"I will use the StartSOLE app to help facilitate our work": "I will use the StartSOLE app to help facilitate our work",
-	"Download the StartSOLE app": "Download the StartSOLE app",
+	"Students will complete an exit ticket after the SOLE": "Los participantes completarán un boleto de salida después del SOLE.",
+	"I will use the StartSOLE app to help facilitate our work": "Usaré la aplicación StartSOLE para ayudar a facilitar nuestro trabajo.",
+	"Download the StartSOLE app": "Descarga la aplicación StartSOLE",
 	"What materials will be available for students to use?": "¿Qué materiales estarán disponibles para los participantes?",
 	"Writing Tools": "Herramientas para escribir",
 	"Poster Paper": "Papel para carteleras",
@@ -150,7 +150,7 @@
 	"Appropriate use of vocabulary": "Uso apropiado del vocabulario",
 	"Students teaching students": "Participantes enseñando participantes",
 	"Helping peers with technology": "Ayudan a sus compañeros con la tecnología.",
-	"Please select at least one student behavior to focus on": "Please select at least one student behavior to focus on",
+	"Please select at least one student behavior to focus on": "Por favor selecciona al menos un comportamiento del participante en el que te gustaría enfocarte",
 	"Privacy Policy": "Política de Privacidad",
 	"Your privacy is very important to us. Accordingly, we have developed this Policy in order for you to understand how we collect, use, communicate and disclose and make use of personal information. The following outlines our privacy policy.": "Su privacidad es muy importante para nosotros. En consecuencia, hemos desarrollado esta Política para que usted pueda comprender cómo recopilamos, usamos, comunicamos y divulgamos y hacemos uso de la información personal. A continuación se describe nuestra política de privacidad.",
 	"Before or at the time of collecting personal information, we will identify the purposes for which information is being collected.": "Antes o al momento de recopilar información personal, identificaremos los propósitos para los cuales se recopila la información.",
@@ -161,14 +161,14 @@
 	"We will protect personal information by reasonable security safeguards against loss or theft, as well as unauthorized access, disclosure, copying, use or modification.": "Protegeremos la información personal mediante medidas de seguridad razonables contra pérdida o robo, así como el acceso, divulgación, copia, uso o modificación no autorizados.",
 	"We will make readily available to customers information about our policies and practices relating to the management of personal information.": "Pondremos a disposición de los usuarios información sobre nuestras políticas y prácticas relacionadas con la gestión de la información personal.",
 	"We are committed to conducting our business in accordance with these principles in order to ensure that the confidentiality of personal information is protected and maintained.": "Estamos comprometidos a llevar a cabo nuestro negocio de acuerdo con estos principios para garantizar que la confidencialidad de la información personal está protegida y mantenida.",
-	"Logout": "Logout",
-	"Plan Lesson": "Plan Lesson",
+	"Logout": "Cerrar sesión",
+	"Plan Lesson": "Planear la lección",
 	"Add a Question": "Agrega una Pregunta",
 	"How to SOLE": "Cómo hacer SOLE",
 	"History of StartSOLE": "History of StartSOLE",
-	"Teacher Resources": "Teacher Resources",
+	"Teacher Resources": "Recursos para maestros",
 	"Español": "Español",
-	"Language": "Language",
+	"Language": "Idioma",
 	"Error!": "Error!",
 	"Take Me Home": "Llevame al inicio",
 	"Contact Us": "Contáctanos",
@@ -267,5 +267,17 @@
 	"Try Our App!": "Try Our App!",
 	"No Thanks": "No Thanks",
 	"To add the StartSOLE signature to your email client, just follow the steps below:": "To add the StartSOLE signature to your email client, just follow the steps below:",
-	"Here is a preview of your signature:": "Here is a preview of your signature:"
+	"Here is a preview of your signature:": "Here is a preview of your signature:",
+	"No CEUs ... yet! Create your first SOLE lesson plan & get points.": "No CEUs ... yet! Create your first SOLE lesson plan & get points.",
+	"Ambassadors": "Ambassadors",
+	"Setup Email Signature": "Setup Email Signature",
+	"Conferences/Events": "Conferences/Events",
+	"Browse": "Browse",
+	"Signup for StartSOLE": "Signup for StartSOLE",
+	"Email Us": "Email Us",
+	"Ambassador": "Ambassador",
+	"Create Lesson": "Create Lesson",
+	"Save Question": "Save Question",
+	"Create Lesson Plan": "Create Lesson Plan",
+	"No SOLEs completed... yet": "No SOLEs completed... yet"
 }
