more Spanish less quotes

--- a/locales/es.json
+++ b/locales/es.json
@@ -78,7 +78,7 @@
 	"Open Gmail.": "Abre Gmail.",
 	"In the top right, click Settings": "En la parte superior derecha, haz clic en Configuración",
 	"Settings": "Ajustes",
-	"Paste your signature (Ctrl+V or Command+V) into the 'Signature' section.": "Pega tu firma (Ctrl+V o Comando+V) en la sección "Firma".",
+	"Paste your signature (Ctrl+V or Command+V) into the 'Signature' section.": "Pega tu firma (Ctrl+V o Comando+V) en la sección 'Firma'.",
 	"At the bottom of the page, click Save Changes.": "En la parte inferior de la página, haz clic en Guardar Cambios.",
 	"Here is a preview of your signatur": "Aquí hay una vista previa de tu firma.",
 	"Copy Signature": "Copia de Firma",
