more Spanish as a test

--- a/locales/es.json
+++ b/locales/es.json
@@ -276,7 +276,7 @@
 	"Signup for StartSOLE": "Signup for StartSOLE",
 	"Email Us": "Email Us",
 	"Ambassador": "Ambassador",
-	"Create Lesson": "Create Lesson",
+	"Create Lesson": "Planear la lección",
 	"Save Question": "Save Question",
 	"Create Lesson Plan": "Create Lesson Plan",
 	"No SOLEs completed... yet": "No SOLEs completed... yet"
