Feature: async rewrite add tests (#304)
* refactor a bunch of functions to be async and then test them with....
* remove the admin routes from default router

--- a/locales/en.json
+++ b/locales/en.json
@@ -273,5 +273,49 @@
 	"Login": "Login",
 	"By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.": "By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.",
 	"Download Plan": "Download Plan",
-	"Download Summary": "Download Summary"
+	"Download Summary": "Download Summary",
+	"Update": "Update",
+	"Email Verified!": "Email Verified!",
+	"Congratulations! You're ready to login": "Congratulations! You're ready to login",
+	"Log In": "Log In",
+	"Looks like we had trouble verifying your email address.  Please get in touch with the link below and we will try to make things right.": "Looks like we had trouble verifying your email address.  Please get in touch with the link below and we will try to make things right.",
+	"Create Lesson": "Create Lesson",
+	"Save Question": "Save Question",
+	"Create Lesson Plan": "Create Lesson Plan",
+	"Add Photos": "Add Photos",
+	"During this SOLE, your objective was": "During this SOLE, your objective was",
+	"Do you think you\n                            achieved this objective?": "Do you think you\n                            achieved this objective?",
+	"Choose your option": "Choose your option",
+	"Strongly Agree": "Strongly Agree",
+	"Agree": "Agree",
+	"Disagree": "Disagree",
+	"Strongly Disagree": "Strongly Disagree",
+	"Select your response": "Select your response",
+	"Why do you think this?": "Why do you think this?",
+	"What type of thinking were most students using during this SOLE?": "What type of thinking were most students using during this SOLE?",
+	"Learn More about Webb's Depth of Knowledge": "Learn More about Webb's Depth of Knowledge",
+	"Recall and Reproduction": "Recall and Reproduction",
+	"Skill/Concept": "Skill/Concept",
+	"Short Term Strategic": "Short Term Strategic",
+	"Long Term Strategic": "Long Term Strategic",
+	"What percentage of students were engaged during the SOLE?": "What percentage of students were engaged during the SOLE?",
+	"What percentage of students worked effectively and respectfully together and shared responsibility?": "What percentage of students worked effectively and respectfully together and shared responsibility?",
+	"What percentage of student groups used technology effectively?": "What percentage of student groups used technology effectively?",
+	"What percentage of students articulated thoughts and listened effectively?": "What percentage of students articulated thoughts and listened effectively?",
+	"Did students appreciate and follow the ground rules?": "Did students appreciate and follow the ground rules?",
+	"Yes": "Yes",
+	"No": "No",
+	"Do you need help with SOLE?": "Do you need help with SOLE?",
+	"If yes, please tell us a little more about your challenge": "If yes, please tell us a little more about your challenge",
+	"Additional Notes for your Records": "Additional Notes for your Records",
+	"Please add at least 1 photo": "Please add at least 1 photo",
+	"Date": "Date",
+	"Attendance": "Attendance",
+	"students": "students",
+	"groups": "groups",
+	"Notes": "Notes",
+	"Students formed their own groups": "Students formed their own groups",
+	"Students shared across groups": "Students shared across groups",
+	"Students completed a self-assessment": "Students completed a self-assessment",
+	"Students followed the ground rules": "Students followed the ground rules"
 }
