updated info on how we run the app and how to make commits

--- a/locales/en.json
+++ b/locales/en.json
@@ -274,18 +274,19 @@
 	"By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.": "By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.",
 	"Download Plan": "Download Plan",
 	"Download Summary": "Download Summary",
-	"Update": "Update",
-	"Email Verified!": "Email Verified!",
-	"Congratulations! You're ready to login": "Congratulations! You're ready to login",
-	"Log In": "Log In",
-	"Looks like we had trouble verifying your email address.  Please get in touch with the link below and we will try to make things right.": "Looks like we had trouble verifying your email address.  Please get in touch with the link below and we will try to make things right.",
 	"Create Lesson": "Create Lesson",
 	"Save Question": "Save Question",
 	"Create Lesson Plan": "Create Lesson Plan",
+	"No SOLEs completed... yet": "No SOLEs completed... yet",
+	"Educators": "Educators",
+	"Dashboard": "Dashboard",
+	"Choose your option": "Choose your option",
+	"No points yet.": "No points yet.",
+	"Create your first SOLE lesson plan and get points.": "Create your first SOLE lesson plan and get points.",
+	"No CEUs ... yet! Create your first SOLE lesson plan & get points.": "No CEUs ... yet! Create your first SOLE lesson plan & get points.",
 	"Add Photos": "Add Photos",
 	"During this SOLE, your objective was": "During this SOLE, your objective was",
 	"Do you think you\n                            achieved this objective?": "Do you think you\n                            achieved this objective?",
-	"Choose your option": "Choose your option",
 	"Strongly Agree": "Strongly Agree",
 	"Agree": "Agree",
 	"Disagree": "Disagree",
@@ -309,6 +310,18 @@
 	"If yes, please tell us a little more about your challenge": "If yes, please tell us a little more about your challenge",
 	"Additional Notes for your Records": "Additional Notes for your Records",
 	"Please add at least 1 photo": "Please add at least 1 photo",
+	"Update": "Update",
+	"Ambassadors": "Ambassadors",
+	"Setup Email Signature": "Setup Email Signature",
+	"Conferences/Events": "Conferences/Events",
+	"Browse": "Browse",
+	"Signup for StartSOLE": "Signup for StartSOLE",
+	"Email Us": "Email Us",
+	"Ambassador": "Ambassador",
+	"No questions yet!": "No questions yet!",
+	"Add A Question": "Add A Question",
+	"Are you sure you want to delete this SOLE?": "Are you sure you want to delete this SOLE?",
+	"Search Notes & Feedback": "Search Notes & Feedback",
 	"Date": "Date",
 	"Attendance": "Attendance",
 	"students": "students",
@@ -317,5 +330,7 @@
 	"Students formed their own groups": "Students formed their own groups",
 	"Students shared across groups": "Students shared across groups",
 	"Students completed a self-assessment": "Students completed a self-assessment",
-	"Students followed the ground rules": "Students followed the ground rules"
+	"Students followed the ground rules": "Students followed the ground rules",
+	"Added to Saved": "Added to Saved",
+	"View": "View"
 }
