--- a/locales/es.json
+++ b/locales/es.json
@@ -279,5 +279,76 @@
 	"Create Lesson": "Planear la lección",
 	"Save Question": "Save Question",
 	"Create Lesson Plan": "Create Lesson Plan",
-	"No SOLEs completed... yet": "No SOLEs completed... yet"
+	"No SOLEs completed... yet": "No SOLEs completed... yet",
+	"Register": "Register",
+	"Already have an account?": "Already have an account?",
+	"Login": "Login",
+	"By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.": "By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.",
+	"Dashboard": "Dashboard",
+	"Educators": "Educators",
+	"SOLEs": "SOLEs",
+	"Schools": "Schools",
+	"Educators By Grade": "Educators By Grade",
+	"Educators By Subject": "Educators By Subject",
+	"SOLEs By Grade": "SOLEs By Grade",
+	"SOLEs By Subject": "SOLEs By Subject",
+	"January": "January",
+	"February": "February",
+	"March": "March",
+	"April": "April",
+	"May": "May",
+	"June": "June",
+	"July": "July",
+	"August": "August",
+	"September": "September",
+	"October": "October",
+	"November": "November",
+	"December": "December",
+	"New Users 2017": "New Users 2017",
+	"New Users 2018": "New Users 2018",
+	"New Users 2019": "New Users 2019",
+	"Pre-K & Kindergarten": "Pre-K & Kindergarten",
+	"Elementary": "Elementary",
+	"Middle": "Middle",
+	"High School": "High School",
+	"Pre-K": "Pre-K",
+	"1st grade": "1st grade",
+	"2nd grade": "2nd grade",
+	"3rd grade": "3rd grade",
+	"4th grade": "4th grade",
+	"5th grade": "5th grade",
+	"6th grade": "6th grade",
+	"7th grade": "7th grade",
+	"8th grade": "8th grade",
+	"9th grade": "9th grade",
+	"10th grade": "10th grade",
+	"11th grade": "11th grade",
+	"12th grade": "12th grade",
+	"Choose your option": "Choose your option",
+	"Add Photos": "Add Photos",
+	"During this SOLE, your objective was": "During this SOLE, your objective was",
+	"Do you think you\n                            achieved this objective?": "Do you think you\n                            achieved this objective?",
+	"Strongly Agree": "Strongly Agree",
+	"Agree": "Agree",
+	"Disagree": "Disagree",
+	"Strongly Disagree": "Strongly Disagree",
+	"Select your response": "Select your response",
+	"Why do you think this?": "Why do you think this?",
+	"What type of thinking were most students using during this SOLE?": "What type of thinking were most students using during this SOLE?",
+	"Learn More about Webb's Depth of Knowledge": "Learn More about Webb's Depth of Knowledge",
+	"Recall and Reproduction": "Recall and Reproduction",
+	"Skill/Concept": "Skill/Concept",
+	"Short Term Strategic": "Short Term Strategic",
+	"Long Term Strategic": "Long Term Strategic",
+	"What percentage of students were engaged during the SOLE?": "What percentage of students were engaged during the SOLE?",
+	"What percentage of students worked effectively and respectfully together and shared responsibility?": "What percentage of students worked effectively and respectfully together and shared responsibility?",
+	"What percentage of student groups used technology effectively?": "What percentage of student groups used technology effectively?",
+	"What percentage of students articulated thoughts and listened effectively?": "What percentage of students articulated thoughts and listened effectively?",
+	"Did students appreciate and follow the ground rules?": "Did students appreciate and follow the ground rules?",
+	"Yes": "Yes",
+	"No": "No",
+	"Do you need help with SOLE?": "Do you need help with SOLE?",
+	"If yes, please tell us a little more about your challenge": "If yes, please tell us a little more about your challenge",
+	"Additional Notes for your Records": "Additional Notes for your Records",
+	"Please add at least 1 photo": "Please add at least 1 photo"
 }
