Add i18n to the dropdown on the question search page. This is the first part to #306. Next the content needs to be translated to Spanish in the es.json object

--- a/locales/es.json
+++ b/locales/es.json
@@ -279,5 +279,24 @@
 	"Create Lesson": "Planear la lección",
 	"Save Question": "Save Question",
 	"Create Lesson Plan": "Create Lesson Plan",
-	"No SOLEs completed... yet": "No SOLEs completed... yet"
+	"No SOLEs completed... yet": "No SOLEs completed... yet",
+	"Subject": "Subject",
+	"Filter by subject": "Filter by subject",
+	"All subjects": "All subjects",
+	"All Subjects": "All Subjects",
+	"College Now": "College Now",
+	"Dance": "Dance",
+	"Drama/Theatre": "Drama/Theatre",
+	"English Language Arts (Common Core)": "English Language Arts (Common Core)",
+	"HRSA (ACT test)": "HRSA (ACT test)",
+	"Mathematics (Common Core)": "Mathematics (Common Core)",
+	"Music": "Music",
+	"Next Generation Science Standards": "Next Generation Science Standards",
+	"Science (High School)": "Science (High School)",
+	"Science (K-8)": "Science (K-8)",
+	"Social Studies (High School)": "Social Studies (High School)",
+	"Social Studies (K-8)": "Social Studies (K-8)",
+	"Visual Arts": "Visual Arts",
+	"Grade": "Grade",
+	"(subject required)": "(subject required)"
 }
