--- a/locales/en.json
+++ b/locales/en.json
@@ -317,5 +317,24 @@
 	"Students formed their own groups": "Students formed their own groups",
 	"Students shared across groups": "Students shared across groups",
 	"Students completed a self-assessment": "Students completed a self-assessment",
-	"Students followed the ground rules": "Students followed the ground rules"
+	"Students followed the ground rules": "Students followed the ground rules",
+	"Subject": "Subject",
+	"Filter by subject": "Filter by subject",
+	"All subjects": "All subjects",
+	"All Subjects": "All Subjects",
+	"College Now": "College Now",
+	"Dance": "Dance",
+	"Drama/Theatre": "Drama/Theatre",
+	"English Language Arts (Common Core)": "English Language Arts (Common Core)",
+	"HRSA (ACT test)": "HRSA (ACT test)",
+	"Mathematics (Common Core)": "Mathematics (Common Core)",
+	"Music": "Music",
+	"Next Generation Science Standards": "Next Generation Science Standards",
+	"Science (High School)": "Science (High School)",
+	"Science (K-8)": "Science (K-8)",
+	"Social Studies (High School)": "Social Studies (High School)",
+	"Social Studies (K-8)": "Social Studies (K-8)",
+	"Visual Arts": "Visual Arts",
+	"Grade": "Grade",
+	"(subject required)": "(subject required)"
 }
