more Spanish as a test

--- a/locales/es.json
+++ b/locales/es.json
@@ -292,18 +292,18 @@
 	"Educators By Subject": "Educators By Subject",
 	"SOLEs By Grade": "SOLEs By Grade",
 	"SOLEs By Subject": "SOLEs By Subject",
-	"January": "January",
-	"February": "February",
-	"March": "March",
-	"April": "April",
-	"May": "May",
-	"June": "June",
-	"July": "July",
-	"August": "August",
-	"September": "September",
-	"October": "October",
-	"November": "November",
-	"December": "December",
+	"January": "enero",
+	"February": "febrero",
+	"March": "marzo",
+	"April": "abril",
+	"May": "mayo",
+	"June": "junio",
+	"July": "julio",
+	"August": "agosto",
+	"September": "septiembre",
+	"October": "octubre",
+	"November": "noviembre",
+	"December": "diciembre",
 	"New Users 2017": "New Users 2017",
 	"New Users 2018": "New Users 2018",
 	"New Users 2019": "New Users 2019",
@@ -312,18 +312,18 @@
 	"Middle": "Middle",
 	"High School": "High School",
 	"Pre-K": "Pre-K",
-	"1st grade": "1st grade",
-	"2nd grade": "2nd grade",
-	"3rd grade": "3rd grade",
-	"4th grade": "4th grade",
-	"5th grade": "5th grade",
-	"6th grade": "6th grade",
-	"7th grade": "7th grade",
-	"8th grade": "8th grade",
-	"9th grade": "9th grade",
-	"10th grade": "10th grade",
-	"11th grade": "11th grade",
-	"12th grade": "12th grade",
+	"1st grade": "Primer grado",
+	"2nd grade": "Segundo grado",
+	"3rd grade": "Tercer grado",
+	"4th grade": "Cuarto grado",
+	"5th grade": "Quinto grado",
+	"6th grade": "Sexto grado",
+	"7th grade": "Séptimo grado",
+	"8th grade": "Octavo grado",
+	"9th grade": "Noveno grado",
+	"10th grade": "Décimo grado",
+	"11th grade": "Onceavo grado",
+	"12th grade": "Duodécimo grado",
 	"Choose your option": "Choose your option",
 	"Add Photos": "Add Photos",
 	"During this SOLE, your objective was": "During this SOLE, your objective was",
@@ -345,7 +345,7 @@
 	"What percentage of student groups used technology effectively?": "What percentage of student groups used technology effectively?",
 	"What percentage of students articulated thoughts and listened effectively?": "What percentage of students articulated thoughts and listened effectively?",
 	"Did students appreciate and follow the ground rules?": "Did students appreciate and follow the ground rules?",
-	"Yes": "Yes",
+	"Yes": "Sí",
 	"No": "No",
 	"Do you need help with SOLE?": "Do you need help with SOLE?",
 	"If yes, please tell us a little more about your challenge": "If yes, please tell us a little more about your challenge",
