--- a/locales/en.json
+++ b/locales/en.json
@@ -274,63 +274,11 @@
 	"By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.": "By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.",
 	"Download Plan": "Download Plan",
 	"Download Summary": "Download Summary",
-	"Create Lesson": "Create Lesson",
-	"Save Question": "Save Question",
-	"Create Lesson Plan": "Create Lesson Plan",
-	"No SOLEs completed... yet": "No SOLEs completed... yet",
 	"Educators": "Educators",
 	"Dashboard": "Dashboard",
 	"Choose your option": "Choose your option",
+	"No SOLEs completed... yet": "No SOLEs completed... yet",
 	"No points yet.": "No points yet.",
 	"Create your first SOLE lesson plan and get points.": "Create your first SOLE lesson plan and get points.",
-	"No CEUs ... yet! Create your first SOLE lesson plan & get points.": "No CEUs ... yet! Create your first SOLE lesson plan & get points.",
-	"Add Photos": "Add Photos",
-	"During this SOLE, your objective was": "During this SOLE, your objective was",
-	"Do you think you\n                            achieved this objective?": "Do you think you\n                            achieved this objective?",
-	"Strongly Agree": "Strongly Agree",
-	"Agree": "Agree",
-	"Disagree": "Disagree",
-	"Strongly Disagree": "Strongly Disagree",
-	"Select your response": "Select your response",
-	"Why do you think this?": "Why do you think this?",
-	"What type of thinking were most students using during this SOLE?": "What type of thinking were most students using during this SOLE?",
-	"Learn More about Webb's Depth of Knowledge": "Learn More about Webb's Depth of Knowledge",
-	"Recall and Reproduction": "Recall and Reproduction",
-	"Skill/Concept": "Skill/Concept",
-	"Short Term Strategic": "Short Term Strategic",
-	"Long Term Strategic": "Long Term Strategic",
-	"What percentage of students were engaged during the SOLE?": "What percentage of students were engaged during the SOLE?",
-	"What percentage of students worked effectively and respectfully together and shared responsibility?": "What percentage of students worked effectively and respectfully together and shared responsibility?",
-	"What percentage of student groups used technology effectively?": "What percentage of student groups used technology effectively?",
-	"What percentage of students articulated thoughts and listened effectively?": "What percentage of students articulated thoughts and listened effectively?",
-	"Did students appreciate and follow the ground rules?": "Did students appreciate and follow the ground rules?",
-	"Yes": "Yes",
-	"No": "No",
-	"Do you need help with SOLE?": "Do you need help with SOLE?",
-	"If yes, please tell us a little more about your challenge": "If yes, please tell us a little more about your challenge",
-	"Additional Notes for your Records": "Additional Notes for your Records",
-	"Please add at least 1 photo": "Please add at least 1 photo",
-	"Update": "Update",
-	"Ambassadors": "Ambassadors",
-	"Setup Email Signature": "Setup Email Signature",
-	"Conferences/Events": "Conferences/Events",
-	"Browse": "Browse",
-	"Signup for StartSOLE": "Signup for StartSOLE",
-	"Email Us": "Email Us",
-	"Ambassador": "Ambassador",
-	"No questions yet!": "No questions yet!",
-	"Add A Question": "Add A Question",
-	"Are you sure you want to delete this SOLE?": "Are you sure you want to delete this SOLE?",
-	"Search Notes & Feedback": "Search Notes & Feedback",
-	"Date": "Date",
-	"Attendance": "Attendance",
-	"students": "students",
-	"groups": "groups",
-	"Notes": "Notes",
-	"Students formed their own groups": "Students formed their own groups",
-	"Students shared across groups": "Students shared across groups",
-	"Students completed a self-assessment": "Students completed a self-assessment",
-	"Students followed the ground rules": "Students followed the ground rules",
-	"Added to Saved": "Added to Saved",
-	"View": "View"
+	"No CEUs ... yet! Create your first SOLE lesson plan & get points.": "No CEUs ... yet! Create your first SOLE lesson plan & get points."
 }
