--- a/locales/es.json
+++ b/locales/es.json
@@ -280,23 +280,23 @@
 	"Save Question": "Save Question",
 	"Create Lesson Plan": "Create Lesson Plan",
 	"No SOLEs completed... yet": "No SOLEs completed... yet",
-	"Subject": "Subject",
-	"Filter by subject": "Filter by subject",
-	"All subjects": "All subjects",
-	"All Subjects": "All Subjects",
+	"Subject": "Materia",
+	"Filter by subject": "Filtrar por materia",
+	"All subjects": "Todos materias",
+	"All Subjects": "Todos materias",
 	"College Now": "College Now",
-	"Dance": "Dance",
-	"Drama/Theatre": "Drama/Theatre",
-	"English Language Arts (Common Core)": "English Language Arts (Common Core)",
-	"HRSA (ACT test)": "HRSA (ACT test)",
-	"Mathematics (Common Core)": "Mathematics (Common Core)",
-	"Music": "Music",
-	"Next Generation Science Standards": "Next Generation Science Standards",
-	"Science (High School)": "Science (High School)",
-	"Science (K-8)": "Science (K-8)",
-	"Social Studies (High School)": "Social Studies (High School)",
-	"Social Studies (K-8)": "Social Studies (K-8)",
-	"Visual Arts": "Visual Arts",
-	"Grade": "Grade",
-	"(subject required)": "(subject required)"
+	"Dance": "Danza",
+	"Drama/Theatre": "Drama",
+	"English Language Arts (Common Core)": "Literatura",
+	"HRSA (ACT test)": "HRSA (Examen ACT)",
+	"Mathematics (Common Core)": "Matemáticas",
+	"Music": "Música",
+	"Next Generation Science Standards": "Ciencia (NGSS)",
+	"Science (High School)": "Ciencia (9-12)",
+	"Science (K-8)": "Ciencia (0-8)",
+	"Social Studies (High School)": "Ciencias Sociales (9-12)",
+	"Social Studies (K-8)": "Ciencias Sociales (0-8)",
+	"Visual Arts": "Artes",
+	"Grade": "Grado",
+	"(subject required)": "(materia requerido)"
 }
