fixes a malformed es.json file that causes i18n to break and not load spanish

--- a/locales/es.json
+++ b/locales/es.json
@@ -350,7 +350,7 @@
 	"Do you need help with SOLE?": "Do you need help with SOLE?",
 	"If yes, please tell us a little more about your challenge": "If yes, please tell us a little more about your challenge",
 	"Additional Notes for your Records": "Additional Notes for your Records",
-	"Please add at least 1 photo": "Please add at least 1 photo"
+	"Please add at least 1 photo": "Please add at least 1 photo",
 	"No SOLEs completed... yet": "No SOLEs completed... yet",
 	"Subject": "Materia",
 	"Filter by subject": "Filtrar por materia",
