en.json updates

--- a/locales/en.json
+++ b/locales/en.json
@@ -299,5 +299,34 @@
 	"Social Studies (K-8)": "Social Studies (K-8)",
 	"Visual Arts": "Visual Arts",
 	"Grade": "Grade",
-	"(subject required)": "(subject required)"
+	"(subject required)": "(subject required)",
+	"No questions yet!": "No questions yet!",
+	"Add A Question": "Add A Question",
+	"Add Photos": "Add Photos",
+	"During this SOLE, your objective was": "During this SOLE, your objective was",
+	"Do you think you\n                            achieved this objective?": "Do you think you\n                            achieved this objective?",
+	"Strongly Agree": "Strongly Agree",
+	"Agree": "Agree",
+	"Disagree": "Disagree",
+	"Strongly Disagree": "Strongly Disagree",
+	"Select your response": "Select your response",
+	"Why do you think this?": "Why do you think this?",
+	"What type of thinking were most students using during this SOLE?": "What type of thinking were most students using during this SOLE?",
+	"Learn More about Webb's Depth of Knowledge": "Learn More about Webb's Depth of Knowledge",
+	"Recall and Reproduction": "Recall and Reproduction",
+	"Skill/Concept": "Skill/Concept",
+	"Short Term Strategic": "Short Term Strategic",
+	"Long Term Strategic": "Long Term Strategic",
+	"What percentage of students were engaged during the SOLE?": "What percentage of students were engaged during the SOLE?",
+	"What percentage of students worked effectively and respectfully together and shared responsibility?": "What percentage of students worked effectively and respectfully together and shared responsibility?",
+	"What percentage of student groups used technology effectively?": "What percentage of student groups used technology effectively?",
+	"What percentage of students articulated thoughts and listened effectively?": "What percentage of students articulated thoughts and listened effectively?",
+	"Did students appreciate and follow the ground rules?": "Did students appreciate and follow the ground rules?",
+	"Yes": "Yes",
+	"No": "No",
+	"Do you need help with SOLE?": "Do you need help with SOLE?",
+	"If yes, please tell us a little more about your challenge": "If yes, please tell us a little more about your challenge",
+	"What worked well during this SOLE? What didn't work well?": "What worked well during this SOLE? What didn't work well?",
+	"Please add at least 1 photo": "Please add at least 1 photo",
+	"Additional Notes for your Records": "Additional Notes for your Records"
 }
